--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -9,13 +9,8 @@
 <body>
     <div class="main">
         <h1>Notepad</h1>
-        <form action="/item" method="POST">
-            <input type="text" name="ToDoItem" placeholder="ToDoを入力"><button class="additionalButton" type="submit">追加</button>
-        </form>
-    </div>
-    <div class="menu">
-        <form action="/archive" method="GET">
-            <button type="submit">アーカイブ</button>
+        <form action="/" method="GET">
+            <button class="additionalButton" type="submit">メインに戻る</button>
         </form>
     </div>
     <% if(data.length > 0 || active) {%>
@@ -26,25 +21,18 @@
                         <div>
                             <form action="/delete" method="POST">
                                 <input type="hidden" name="itemToDelete" value="<%= data[i] %>">
-                                <button type="submit" class="additionalButton">完了</button>
+                                <button type="submit" class="additionalButton">完全に削除</button>
                             </form>
                             <% if(editActive) {%>
                             <form action="/editbutton" method="POST">
                                 <button type="submit">編集する</button>
                             </form>
                             <% } %>
-                            <% if(active) {%>
-                            <form action="/edit" method="POST">
-                                <input type="hidden" name="originalText" value="<%= data[i] %>">
-                                <input type="text" name="editedText" value="<%= data[i] %>" placeholder="<%= data[i] %>">
-                                <button type="submit" >編集</button>
-                            </form>
-                            <% } %>
                         </div>
                     </h1>
                 </div>
+        </div>]
             <% } %>
-        </div>
     <% } else { %>
         <h1>ToDoリストがありません。</h1>
     <% } %>
