--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,15 +9,19 @@
 <body>
     <div class="main">
         <h1>Notepad</h1>
+        <div class="bar">
+            <form action="/archive" method="GET">
+                <button class="additionalButton" type="submit">アーカイブ</button>
+            </form>
+        </div>
+    </div>
+    <div class="inputText">
         <form action="/item" method="POST">
             <input type="text" name="ToDoItem" placeholder="ToDoを入力"><button class="additionalButton" type="submit">追加</button>
         </form>
     </div>
-    <div class="menu">
-        <form action="/archive" method="GET">
-            <button type="submit">アーカイブ</button>
-        </form>
-    </div>
+        
+    
     <% if(data.length > 0 || active) {%>
         <div class="container_list">
             <% for (var i = 0; i < data.length; i++) {%>
