--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -17,11 +17,11 @@
         <div class="container_list">
             <% for (var i = 0; i < data.length; i++) {%>
                 <div class="item">
-                    <% console.log(data[i]) %>
+                    <% %>
                     <h1>やること<%= i %>: <%= data[i].itemDelete  %></h1>
                         <div>
                             <form action="/deleteArchive" method="POST">
-                                <input type="hidden" name="archiveToDelete" value="<%= data[i]._id %>">
+                                <input type="hidden" name="archiveToDelete" value="<%= data[i].itemDelete %>">
                                 <button type="submit" class="additionalButton">完全に削除</button>
                             </form>
                             <form action="/returnMain" method="POST">
