enable archive returning home

--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -25,7 +25,7 @@
                                 <button type="submit" class="additionalButton">完全に削除</button>
                             </form>
                             <form action="/returnMain" method="POST">
-                                <input type="hidden" name="returnArchive" value="<%=data[i]._id%>">
+                                <input type="hidden" name="returnArchive" value="<%=data[i].itemDelete%>">
                                 <button type="submit">ToDoリストに戻す</button>
                             </form>
                         </div>
