mongodb setting is successful

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,7 @@
                         <div>
                             <form action="/delete" method="POST">
                                 <input type="hidden" name="itemToDelete" value="<%= data[i].postItem %>">
-                                <% console.log(data[i].postItem) %>
+                                <%//console.log(data[i].postItem) %>
                                 <button type="submit" class="additionalButton">完了</button>
                             </form>
                             <% if(editActive) {%>
