MainTitle is changed

--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="main">
-        <h1>Notepad</h1>
+        <h1>ToDoリスト</h1>
         <form action="/" method="GET">
             <button class="additionalButton" type="submit">メインに戻る</button>
         </form>
