--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="main">
-        <h1>Notepad</h1>
+        <h1>ToDoリスト</h1>
         <div class="bar">
             <form action="/archive" method="GET">
                 <button class="additionalButton" type="submit">アーカイブ</button>
