--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,7 @@
                         <div>
                             <form action="/delete" method="POST">
                                 <input type="hidden" name="itemToDelete" value="<%= data[i].item %>">
-                                <%//console.log(data[i].item) %>
+                                <input type="hidden" name="_id" value="<%= data[i]._id %>">
                                 <button type="submit" class="additionalButton">完了</button>
                             </form>
                             <% if(editActive) {%>
