--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,54 +7,64 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
+    <div class="container ">
         <h1>ToDoリスト</h1>
-        <div class="bar">
-            <form action="/archive" method="GET">
-                <button class="btn btn-outline-primary" type="submit">アーカイブ</button>
-            </form>
+        <div class="row">
+            <div class="col-md-12 d-flex">
+                <form action="/archive" method="GET">
+                    <button class="btn btn-outline-primary" type="submit">アーカイブ</button>
+                </form>
+            </div>
         </div>
-        <form action="/item" method="POST">
-            <input type="text" class="form-control" name="ToDoItem" placeholder="ToDoを入力"><button class="btn btn-primary" type="submit">追加</button>
-        </form>
-    </div>
-    
-    <% if(data.length > 0 || active) {%>
-        <div class="container text-center">
-            <% for (var i = 0; i < data.length; i++) {%>
-                <div class="row mt-3">
-                    <div class="col-md-4">
-                        <div class="card" style="width: 18rem;">
-                            <% if(completeButton) { %>
-                            <div class="card-body">
-                            <h5 class="card-title"><%= i %>: <%= data[i].item%></h5>
-                                <form action="/delete" method="POST">
-                                    <input type="hidden" name="itemToDelete" value="<%= data[i].item %>">
-                                    <input type="hidden" name="_id" value="<%= data[i]._id %>">
-                                    <button type="submit" class="btn btn-primary">完了</button>
-                                </form>
-                            </div>
-                            <% } %>
-                            <% if(editButton) {%>
-                                <form action="/editbutton" method="POST">
-                                    <button class="btn btn-warning" type="submit">編集する</button>
-                                </form>
-                                <% } %>
-                                <% if(active) {%>
-                                <form action="/edit" method="POST">
-                                    <input type="hidden" name="originalText" value="<%= data[i].item %>">
-                                    <input type="hidden" name="_id" value="<%= data[i]._id %>">
-                                    <input type="text" class="form-control" name="editedText" value="<%= data[i].item %>" placeholder="<%= data[i].item %>">
-                                    <button class="btn btn-danger" type="submit" >編集</button>
-                                </form>
-                                <% } %>
-                        </div>
-                      </div>
+        <div class="row">
+            <div class="col">
+                <form action="/item" method="POST">
+                    <input type="text" class="form-control" name="ToDoItem" placeholder="ToDoを入力">
                 </div>
-            <% } %>
+                <div class="col">
+                    <button class="btn btn-primary" type="submit">追加</button>
+                    </form>        
+                </div>
         </div>
-    <% } else { %>
-        <h1>ToDoリストがありません。</h1>
-    <% } %>
+        </div>
+    </div>
+
+    <div class="container text-center">
+        <% if(data.length > 0 || active) {%>
+            <div class="row">
+                <% for (var i = 0; i < data.length; i++) {%>
+                        <div class="col-md-4">
+                            <div class="card d-flex flex-column" style="width: 18rem;">
+                                <% if(completeButton) { %>
+                                <div class="card-body">
+                                <h5 class="card-title"><%= i %>: <%= data[i].item%></h5>
+                                    <form action="/delete" method="POST">
+                                        <input type="hidden" name="itemToDelete" value="<%= data[i].item %>">
+                                        <input type="hidden" name="_id" value="<%= data[i]._id %>">
+                                        <button type="submit" class="btn btn-primary">完了</button>
+                                    </form>
+                                </div>
+                                <% } %>
+                                <% if(editButton) {%>
+                                    <form action="/editbutton" method="POST">
+                                        <button class="btn btn-warning" type="submit">編集する</button>
+                                    </form>
+                                    <% } %>
+                                    <% if(active) {%>
+                                    <form action="/edit" method="POST">
+                                        <input type="hidden" name="originalText" value="<%= data[i].item %>">
+                                        <input type="hidden" name="_id" value="<%= data[i]._id %>">
+                                        <input type="text" class="form-control" name="editedText" value="<%= data[i].item %>" placeholder="<%= data[i].item %>">
+                                        <button class="btn btn-danger" type="submit" >編集</button>
+                                    </form>
+                                    <% } %>
+                            </div>
+                        </div>
+                        <% } %>
+                    </div>
+        <% } else { %>
+            <h1>ToDoリストがありません。</h1>
+        <% } %>
+    </div>
 </body>
 </html>
