--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,20 +7,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+
+    <nav>
+        <div class="container-fluid">
+            <form action="/archive" method="GET">
+                <button class="btn btn-outline-primary" type="submit">アーカイブ</button>
+            </form>
+          <span class="navbar-toggler-icon"></span>
+            </button>
+    </nav>
+
     <div class="container">
-        <div class="row">
-            <div class="col-md-12 d-flex">
-                <form action="/archive" method="GET">
-                    <button class="btn btn-outline-primary" type="submit">アーカイブ</button>
-                </form>
-            </div>
-        </div>
-        <div class="row pb-4">
-            <div class="col">
+        <div class="row text-center pb-4">
+            <div class="col-md-8 order-1 ">
                 <form action="/item" method="POST">
                     <input type="text" class="form-control" name="ToDoItem" placeholder="ToDoを入力">
                 </div>
-                <div class="col">
+                <div class="col-md-2 order-2">
                     <button class="btn btn-primary" type="submit">追加</button>
                     </form>        
                 </div>
@@ -32,36 +35,42 @@
             <div class="row">
                 <% for (var i = 0; i < data.length; i++) {%>
                     <div class="col-md-4 pb-4">
-                    <div class="card d-flex flex-column" style="height: 150px">
-                                <% if(completeButton) { %>
-                                <div class="card-body">
+                        <div class="card d-flex flex-column" style="height: 150px">
+                            <% if(completeButton) { %>
+                            <div class="card-body">
                                 <h5 class="card-title"><%= i %>: <%= data[i].item%></h5>
-                                    <form action="/delete" method="POST">
-                                        <input type="hidden" name="itemToDelete" value="<%= data[i].item %>">
-                                        <input type="hidden" name="_id" value="<%= data[i]._id %>">
-                                        <button type="submit" class="btn btn-primary">完了</button>
-                                    </form>
-                                </div>
-                                <% } %>
-                                <% if(editButton) {%>
-                                    <form action="/editbutton" method="POST">
-                                        <button class="btn btn-warning" type="submit">編集する</button>
-                                    </form>
-                                    <% } %>
-                                    <% if(active) {%>
-                                    <form action="/edit" method="POST">
-                                        <input type="hidden" name="originalText" value="<%= data[i].item %>">
-                                        <input type="hidden" name="_id" value="<%= data[i]._id %>">
-                                        <input type="text" class="form-control" name="editedText" value="<%= data[i].item %>" placeholder="<%= data[i].item %>">
-                                        <button class="btn btn-danger" type="submit" >編集</button>
-                                    </form>
-                                    <% } %>
+                                <form action="/delete" method="POST">
+                                    <input type="hidden" name="itemToDelete" value="<%= data[i].item %>">
+                                    <input type="hidden" name="_id" value="<%= data[i]._id %>">
+                                    <button type="submit" class="btn btn-primary">完了</button>
+                                </form>
                             </div>
+                            <% } %>
+                            <% if(editButton) {%>
+                                <form action="/editbutton" method="POST">
+                                    <button class="btn btn-warning" type="submit">編集する</button>
+                                </form>
+                            <% } %>
+                            <% if(active) {%>
+                                <form action="/edit" method="POST">
+                                    <input type="hidden" name="originalText" value="<%= data[i].item %>">
+                                    <input type="hidden" name="_id" value="<%= data[i]._id %>">
+                                    <div class="col-md-9">
+                                        <input type="text" class="form-control" name="editedText" value="<%= data[i].item %>" placeholder="<%= data[i].item %>">
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <button class="btn btn-danger" type="submit" >編集</button>
+                                    </div>
+                                </form>
+                            <% } %>
                         </div>
+                    </div>
                 <% } %>
             </div>
+        </div>
     <% } else { %>
         <h1>ToDoリストがありません。</h1>
     <% } %>
+    
 </body>
 </html>
